# qrCodeImageSorterGUI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
qrImageIndexerGUI/: __main__.py  custom_scrolled_text.py  generate_qr_window.py  image_grid.py  launch_window.py  sort_images_window.py
test/: test_generate_qr_window.py  test_sort_images_window.py
